fix align

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -12881,7 +12881,7 @@ body {
 .slogan-position{
   position: absolute;
   top:28%;
-  left: 4%;
+  left: 6%;
 }
 
 
